# rust-chatroom-project

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: lib.rs  main.rs
proto-gen/: Cargo.toml
proto-gen/src/: main.rs
proto_chatroom/: Cargo.toml
proto_chatroom/src/: chatroom.rs  lib.rs
protos/chatroom/: chatroom.proto
server/: Cargo.toml
server/src/: lib.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
