[package]
name = "server"
version = "0.1.0"
authors = ["Jordi Paris Ferrer <jparisferrer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto_chatroom = {path = "../proto_chatroom" }
shared = {path = "../shared" }
