[package]
name = "shared"
version = "0.1.0"
authors = ["Jordi Paris Ferrer <jparisferrer@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pb-jelly = "0.0.11"
proto_chatroom = {path = "../proto_chatroom" }
tokio = {version = "1", features = ["full"]}
futures = {version = "0.3"}
async-stream = {version = "0.3"}
tokio-stream = {version = "0.1"}
anyhow = {version = "1"}
